--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
 
     <!-- CSS Custom-->
     <link rel="stylesheet" href="assets/custom/css/style.css"/>
+    <link rel="stylesheet" href="assets/custom/css/sidebar-navigation.css"/>
 
     <!-- JavaScript Assets--> 
   	<script src="assets/node_modules/angular/angular.min.js"> </script>
@@ -13,10 +14,11 @@
     <script src="assets/node_modules/angular-route/angular-route.js"> </script>
     <script src="assets/node_modules/bootstrap/dist/js/bootstrap.min.js"> </script>
     
-    <!-- JavaScript Customs -->
+    <!-- JavaScript Custom -->
     <script src="app.js"> </script>
     <script src="app/partages/navbar-connecte/navbar-connecte-directive.js"> </script>
     <script src="app/partages/navbar-login/navbar-login-directive.js"> </script>
+    <script src="app/partages/sidebar-navigation/sidebar-navigation-directive.js"> </script>
     <script src="app/routes.js"> </script>
   </head>
   
