--- a/client/app/composants/tableauDeBord/tableauDeBord.html
+++ b/client/app/composants/tableauDeBord/tableauDeBord.html
@@ -1,3 +1,4 @@
 <navbar-connecte></navbar-connecte>
 <sidebar-navigation></sidebar-navigation>
-
+<tableau-de-dette></tableau-de-dette>
+<sidebar-droigt></sidebar-droigt>
