--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/custom/css/sidebarNavigation.css"/>
     <link rel="stylesheet" href="assets/custom/css/sidebarDroigt.css"/>
     <link rel="stylesheet" href="assets/custom/css/tableauDeDette.css"/>
+    <link rel="stylesheet" href="assets/custom/css/inscription.css"/>
 
     <!-- JavaScript Assets--> 
   	<script src="assets/node_modules/angular/angular.min.js"> </script>
@@ -20,6 +21,7 @@
     <script src="app.js"> </script>
     <script src="app/partages/navbarConnecte/navbarConnecteDirective.js"> </script>
     <script src="app/partages/navbarLogin/navbarLoginDirective.js"> </script>
+    <script src="app/partages/navbarVide/navbarVideDirective.js"> </script>
     <script src="app/partages/sidebarNavigation/sidebarNavigationDirective.js"> </script>
     <script src="app/partages/sidebarDroigt/sidebarDroigtDirective.js"> </script>
     <script src="app/composants/tableauDeDette/tableauDeDetteDirective.js"> </script>
