Rajouté les bases pour quelques contrôleurs

--- a/client/app/composants/tableauDeDette/tableauDeDette.html
+++ b/client/app/composants/tableauDeDette/tableauDeDette.html
@@ -1,8 +1,8 @@
-<div class="col-md-6 tableauDeDette">
+<div ng-controller="TableauDeDetteControlleur" class="col-md-6 tableauDeDette">
   <h1>
   	Transactions en Cours 
   </h1>
-  <h4> Votre solde: xxx </h4>
+  <h4> Votre solde: {{solde}}</h4>
 
   <!-- À remplacer -->
   <div class="col-md-6">
