--- a/client/index.html
+++ b/client/index.html
@@ -16,10 +16,20 @@
   	<script src="assets/node_modules/angular/angular.min.js"> </script>
     <script src="assets/node_modules/jquery/dist/jquery.js"> </script>
     <script src="assets/node_modules/angular-route/angular-route.js"> </script>
+    <script src="assets/node_modules/angular-resource/angular-resource.js"> </script>
     <script src="assets/node_modules/bootstrap/dist/js/bootstrap.min.js"> </script>
     
     <!-- JavaScript Custom -->
     <script src="app.js"> </script>
+    <script src="app/routes.js"> </script>
+    
+    <!-- JavaScript Controlleurs Customs -->
+    <script src="app/partages/navbarLogin/navbarLoginControlleur.js"> </script>
+    <script src="app/composants/inscription/inscriptionControlleur.js"> </script>
+    <script src="app/composants/tableauDeDette/tableauDeDetteControlleur.js"> </script>
+    <script src="app/partages/activiteRecente/activiteRecenteControlleur.js"> </script>
+
+    <!-- JavaScript Directives Customs -->
     <script src="app/partages/navbarConnecte/navbarConnecteDirective.js"> </script>
     <script src="app/partages/navbarLogin/navbarLoginDirective.js"> </script>
     <script src="app/partages/navbarVide/navbarVideDirective.js"> </script>
@@ -27,7 +37,7 @@
     <script src="app/partages/sidebarDroigt/sidebarDroigtDirective.js"> </script>
     <script src="app/composants/tableauDeDette/tableauDeDetteDirective.js"> </script>
     <script src="app/partages/activiteRecente/activiteRecenteDirective.js"> </script>
-    <script src="app/routes.js"> </script>
+
   </head>
   
   <body>
