--- a/client/app/composants/inscription/inscription.html
+++ b/client/app/composants/inscription/inscription.html
@@ -1,5 +1,5 @@
 <navbar-vide></navbar-vide>
-<div ng-controller="InscriptionControlleur" class="container">
+<div ng-controller="InscriptionControleur" class="container">
       <form class="form-inscription">
         <h2 class="form-inscription-heading">Veuillez fournir les données démandées: </h2>
         <label for="mel" class="sr-only">Mél</label>
