--- a/client/app/partages/navbarLogin/navbarLogin.html
+++ b/client/app/partages/navbarLogin/navbarLogin.html
@@ -1,4 +1,4 @@
-<nav ng-controller="NavbarLoginControlleur" class="navbar navbar-inverse navbar-fixed-top">
+<nav ng-controller="NavbarLoginControleur" class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="#/">Splitwise</a>
