Fixé problème avec $location

--- a/client/app/partages/navbarLogin/navbarLogin.html
+++ b/client/app/partages/navbarLogin/navbarLogin.html
@@ -10,7 +10,7 @@
       <div class="form-group">
         <input type="password" placeholder="Mot de Passe" class="form-control">
       </div>
-      <button ng-click="$location.path('/tableauDeBord')" class="btn btn-success"> Se Connecter </button>
+      <button ng-click="envoyerLogin()" class="btn btn-success"> Se Connecter </button>
     </form>
   </div>
 </nav>
