--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,7 @@
     <script src="app/composants/inscription/inscriptionControleur.js"> </script>
     <script src="app/composants/tableauDeDette/tableauDeDetteControleur.js"> </script>
     <script src="app/partages/activiteRecente/activiteRecenteControleur.js"> </script>
+    <script src="app/composants/touteActivite/touteActiviteControleur.js"> </script>
 
     <!-- JavaScript Directives Customs -->
     <script src="app/partages/navbarConnecte/navbarConnecteDirective.js"> </script>
@@ -37,6 +38,7 @@
     <script src="app/partages/sidebarDroigt/sidebarDroigtDirective.js"> </script>
     <script src="app/composants/tableauDeDette/tableauDeDetteDirective.js"> </script>
     <script src="app/partages/activiteRecente/activiteRecenteDirective.js"> </script>
+    <script src="app/composants/touteActivite/touteActiviteDirective.js"> </script>
 
   </head>
   
