Implémenté SidebarNaviagationControleur.js

--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,7 @@
     <script src="app/composants/tableauDeDette/tableauDeDetteControleur.js"> </script>
     <script src="app/partages/activiteRecente/activiteRecenteControleur.js"> </script>
     <script src="app/composants/touteActivite/touteActiviteControleur.js"> </script>
+    <script src="app/partages/sidebarNavigation/sidebarNavigationControleur.js"> </script>
 
     <!-- JavaScript Directives Customs -->
     <script src="app/partages/navbarConnecte/navbarConnecteDirective.js"> </script>
