--- a/client/app/partages/sidebarNavigation/sidebarNavigation.html
+++ b/client/app/partages/sidebarNavigation/sidebarNavigation.html
@@ -1,5 +1,5 @@
 <div class="col-md-3">
-<div class="sidebar-nav">
+  <div ng-controller="SidebarNavigationControleur" class="sidebar-nav">
   <div class="navbar navbar-default" role="navigation">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-navbar-collapse">
@@ -12,9 +12,9 @@
     </div>
     <div class="navbar-collapse collapse sidebar-navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#"> Tableau de Bord</a></li>
-        <li><a href="#">Amis et Groupes </a></li>
-        <li><a href="#">Toute Activité</a></li>
+        <li class="active"><a ng-click="dirigerVersURL('/tableauDeBord')"> Tableau de Bord</a></li>
+        <li><a ng-click="dirigerVersURL('/relations')">Amis et Groupes </a></li>
+        <li><a ng-click="dirigerVersURL('/historique')">Toute Activité</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
