Fichiers Relations écrites

--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,7 @@
     <script src="app/partages/activiteRecente/activiteRecenteControleur.js"> </script>
     <script src="app/composants/touteActivite/touteActiviteControleur.js"> </script>
     <script src="app/partages/sidebarNavigation/sidebarNavigationControleur.js"> </script>
+    <script src="app/composants/relations/relationsControleur.js"> </script>
 
     <!-- JavaScript Directives Customs -->
     <script src="app/partages/navbarConnecte/navbarConnecteDirective.js"> </script>
@@ -40,6 +41,7 @@
     <script src="app/composants/tableauDeDette/tableauDeDetteDirective.js"> </script>
     <script src="app/partages/activiteRecente/activiteRecenteDirective.js"> </script>
     <script src="app/composants/touteActivite/touteActiviteDirective.js"> </script>
+    <script src="app/composants/relations/relationsDirective.js"> </script>
 
   </head>
   
