--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,8 @@
     <script src="app/partages/activiteRecente/activiteRecenteControleur.js"> </script>
     <script src="app/composants/touteActivite/touteActiviteControleur.js"> </script>
     <script src="app/partages/sidebarNavigation/sidebarNavigationControleur.js"> </script>
-
+    <script src="app/composants/transaction/id/transactionControleur.js"> </script>
+    
     <!-- JavaScript Directives Customs -->
     <script src="app/partages/navbarConnecte/navbarConnecteDirective.js"> </script>
     <script src="app/partages/navbarLogin/navbarLoginDirective.js"> </script>
@@ -40,6 +41,10 @@
     <script src="app/composants/tableauDeDette/tableauDeDetteDirective.js"> </script>
     <script src="app/partages/activiteRecente/activiteRecenteDirective.js"> </script>
     <script src="app/composants/touteActivite/touteActiviteDirective.js"> </script>
+    <script src="app/composants/transaction/id/transactionDirective.js"> </script>
+ 
+
+
 
   </head>
   
