--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,7 @@
     <script src="app/composants/touteActivite/touteActiviteControleur.js"> </script>
     <script src="app/partages/sidebarNavigation/sidebarNavigationControleur.js"> </script>
     <script src="app/composants/transaction/id/transactionControleur.js"> </script>
+    <script src="app/composants/transaction/nouvelle/transactionNouvelleControleur.js"> </script>
     <script src="app/composants/relations/relationsControleur.js"> </script>
 
     <!-- JavaScript Directives Customs -->
@@ -43,6 +44,7 @@
     <script src="app/partages/activiteRecente/activiteRecenteDirective.js"> </script>
     <script src="app/composants/touteActivite/touteActiviteDirective.js"> </script>
     <script src="app/composants/transaction/id/transactionDirective.js"> </script>
+    <script src="app/composants/transaction/nouvelle/transactionNouvelleDirective.js"> </script>
     <script src="app/composants/relations/relationsDirective.js"> </script>
 
   </head>
