--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,11 @@
     <script src="app.js"> </script>
     <script src="app/routes.js"> </script>
     
-    <!-- JavaScript Controlleurs Customs -->
+    <!-- JavaScript Usines Customs -->
+    <script src="app/modeles/Utilisateur.js"> </script>
+
+
+    <!-- JavaScript Controleurs Customs -->
     <script src="app/partages/navbarLogin/navbarLoginControleur.js"> </script>
     <script src="app/composants/inscription/inscriptionControleur.js"> </script>
     <script src="app/composants/tableauDeDette/tableauDeDetteControleur.js"> </script>
@@ -46,7 +50,7 @@
     <script src="app/composants/transaction/id/transactionDirective.js"> </script>
     <script src="app/composants/transaction/nouvelle/transactionNouvelleDirective.js"> </script>
     <script src="app/composants/relations/relationsDirective.js"> </script>
-
+    <base href="/">
   </head>
   
   <body>
