--- a/client/app/composants/transaction/nouvelle/transactionNouvelle.html
+++ b/client/app/composants/transaction/nouvelle/transactionNouvelle.html
@@ -1,10 +1,27 @@
 
 <div ng-controller="TransactionNouvelleControleur" class="col-md-6 transactionNouvelle">
   <table class='table transaction table-striped'>
-  <h1>
-    Ajouter une Nouvelle Transaction
-  </h1>
-  
- 
+  <center><h3>
+   Création d'une nouvelle Transaction
+  </h3></center>
+  	
+  <ng-form name="FormTransac"  class="maTransac">
+  	Cette transaction est établie entre:<br/><br/>
+  		Nom : <input name="inputName" ng-model="nomAjouter" placeholder="Veuillez entrer votre nom" required="obligatoire">
+  		<div ng-repeat="nom in noms" id="nameT" >
+  			{{nom}}
+  		</div>
+  		<button class="btn btn-primary btn-block" ng-click="ajouterNom()"> + Participant </button>
+  		<br/>
+  		<label for="Description"> Description: </label> <br/>
+  		<textarea ng-model="description" required="obligatoire"> ... </textarea>
+  		<br/><br/>
+  		<label for="Montant"> Montant: </label> <br/>
+  		<input type="number" min="0.00" max="9999999999.99" ng-model="Montant" required="obligatoire">  </input>
+
+  		<br/><br/>
+  		<button class="btn btn-primary btn-block" ng-click="sauvegarder()"> Sauvegarder </button>
+
+  </ng-form>
   </table>
 </div>
