--- a/client/app/composants/transaction/nouvelle/transactionNouvelle.html
+++ b/client/app/composants/transaction/nouvelle/transactionNouvelle.html
@@ -18,8 +18,17 @@
   		<br/><br/>
   		<label for="Montant"> Montant: </label> <br/>
   		<input type="number" min="0.00" max="9999999999.99" ng-model="Montant" required="obligatoire">  </input>
-
   		<br/><br/>
+  		 Payé par:
+  		<select name="SelectParticipant" >
+	      <option ng-repeat="nom in noms">{{nom}}</option>
+	    </select><br/><br/>
+  		<br/><br/>
+  		<label for="SelectTypeTransac"> Sélectionner le type de transaction: </label><br>
+	    <select name="SelectTypeTransac" ng-model="typeTransaction">
+	      <option value="exacte">Exacte</option>
+	      <option value="equitable">Equitable</option>
+	    </select><br/><br/>
   		<button class="btn btn-primary btn-block" ng-click="sauvegarder()"> Sauvegarder </button>
 
   </ng-form>
