--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,7 @@
     <script src="app/composants/transaction/id/transactionControleur.js"> </script>
     <script src="app/composants/transaction/nouvelle/transactionNouvelleControleur.js"> </script>
     <script src="app/composants/relations/relationsControleur.js"> </script>
+    <script src="app/composants/amis/ajouterAmisControleur.js"> </script>
 
     <!-- JavaScript Directives Customs -->
     <script src="app/partages/navbarConnecte/navbarConnecteDirective.js"> </script>
@@ -50,6 +51,8 @@
     <script src="app/composants/transaction/id/transactionDirective.js"> </script>
     <script src="app/composants/transaction/nouvelle/transactionNouvelleDirective.js"> </script>
     <script src="app/composants/relations/relationsDirective.js"> </script>
+    <script src="app/composants/amis/ajouterAmisDirective.js"> </script>
+
     <base href="/">
   </head>
   
