mise en oeuvre du POST TransactionNouvelle

--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
     
     <!-- JavaScript Usines Customs -->
     <script src="app/modeles/Utilisateur.js"> </script>
+    <script src="app/modeles/TransactionNouvelle.js"> </script>
 
 
     <!-- JavaScript Controleurs Customs -->
