--- a/client/app/composants/tableauDeDette/tableauDeDette.html
+++ b/client/app/composants/tableauDeDette/tableauDeDette.html
@@ -4,6 +4,8 @@
   </h1>
   <h4> Votre solde: {{solde}}</h4>
 
+  <button class='btn btn-primary' ng-click="ajouterTransaction()"> Ajouter une Transaction </button>
+
   <!-- À remplacer -->
   <div class="col-md-6">
   	<h3>
