--- a/client/index.html
+++ b/client/index.html
@@ -41,6 +41,7 @@
     <script src="app/composants/transaction/nouvelle/transactionNouvelleControleur.js"> </script>
     <script src="app/composants/relations/relationsControleur.js"> </script>
     <script src="app/composants/amis/ajouterAmisControleur.js"> </script>
+    <script src="app/partages/navbarConnecte/navbarConnecteControleur.js"> </script>
 
     <!-- JavaScript Directives Customs -->
     <script src="app/partages/navbarConnecte/navbarConnecteDirective.js"> </script>
