--- a/client/app/partages/navbarConnecte/navbarConnecte.html
+++ b/client/app/partages/navbarConnecte/navbarConnecte.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav ng-controller="NavbarConnecteContoleur" class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#/">Splitwise</a>
+      <a class="navbar-brand" href="/">Splitwise</a>
     </div>
-    <form class="navbar-form navbar-right">
-      <button type="submit" class="btn btn-success">Deconnexion</button>
-    </form>
+    <div class="navbar-form navbar-right">
+      <button ng-click="deconnecter()"class="btn btn-success">Deconnexion</button>
+    </div>
   </div>
 </nav>
