Liens vers page d'inscription

--- a/client/app/partages/navbarLogin/navbarLogin.html
+++ b/client/app/partages/navbarLogin/navbarLogin.html
@@ -11,6 +11,7 @@
         <input ng-model="motDePasse" type="password" placeholder="Mot de Passe" class="form-control">
       </div>
       <button ng-click="envoyerLogin()" class="btn btn-success"> Se Connecter </button>
+      <button ng-click="pageInscription()" class="btn btn-info"> Inscription </button>
     </form>
   </div>
 </nav>
