GET Transactions /tableauDeBord

--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,7 @@
     <script src="app/modeles/Utilisateur.js"> </script>
     <script src="app/modeles/Inscription.js"> </script>
     <script src="app/modeles/TransactionNouvelle.js"> </script>
+    <script src="app/modeles/Transactions.js"> </script>
 
 
     <!-- JavaScript Controleurs Customs -->
