Ajouté fichier dans index.html

--- a/client/index.html
+++ b/client/index.html
@@ -29,6 +29,7 @@
     <script src="app/modeles/Inscription.js"> </script>
     <script src="app/modeles/TransactionNouvelle.js"> </script>
     <script src="app/modeles/Transactions.js"> </script>
+    <script src="app/modeles/Amis.js"> </script>
 
 
     <!-- JavaScript Controleurs Customs -->
