--- a/client/app/composants/amis/ajouterAmis.html
+++ b/client/app/composants/amis/ajouterAmis.html
@@ -6,9 +6,9 @@
     <div  class="col-md-6" >
     	Nom : <input name="inputAmi" ng-model="nomAmi" placeholder="Saisir nouvel ami" required="obligatoire">
 	    <div ng-repeat="n in noms | filter: nomAmi" id="nameT" >
-	  			{{nom}} {{n.prenom}}
+	  			<h1> kdkdkdkd </h1>
 	  	</div>
-	  	<button class="btn btn-primary btn-block" ng-click="ajouterAmi"> + Ami(s) </button>
+	  	<button class="btn btn-primary btn-block" ng-click="ajouterAmi()"> + Ami(s) </button>
 	</div>
 
   </table>
