Données récupérées via Cookies côté serveur

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
     <script src="assets/node_modules/angular-route/angular-route.js"> </script>
     <script src="assets/node_modules/angular-resource/angular-resource.js"> </script>
     <script src="assets/node_modules/angular-cookies/angular-cookies.js"> </script>
+    <script src="assets/node_modules/cookie-parser/index.js"> </script>
     <script src="assets/node_modules/bootstrap/dist/js/bootstrap.min.js"> </script>
     
     <!-- JavaScript Custom -->
