Données de Transaction Affichées

--- a/client/app/composants/tableauDeDette/tableauDeDette.html
+++ b/client/app/composants/tableauDeDette/tableauDeDette.html
@@ -5,23 +5,21 @@
   <h4> Votre solde: {{solde}}</h4>
 
   <button class='btn btn-primary' ng-click="ajouterTransaction()"> Ajouter une Transaction </button>
-
-  <!-- À remplacer -->
+  <h3>
+      En Attente
+  </h3>
   <div class="col-md-6">
-  	<h3>
-  		À Payer
-  	</h3>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed imperdiet lectus. Maecenas dapibus dictum massa ac mollis. Nulla suscipit turpis velit, a elementum purus convallis eget. Phasellus metus nibh, efficitur at tempor sit amet, ultricies vel neque. Morbi mi purus, fermentum eu convallis sit amet, posuere id metus. Sed interdum ut orci in rutrum. Nullam efficitur vehicula scelerisque. Integer sit amet dolor tristique, egestas ipsum eget, aliquet risus. Vestibulum porttitor a lacus id commodo. Proin id lorem faucibus, posuere urna eget, pellentesque metus. Duis in nisi scelerisque libero blandit mollis a ut felis. Curabitur pretium eros ut nulla faucibus, vitae maximus diam tristique. Sed at feugiat nibh.
-
-    In ultrices ac quam quis venenatis. Donec id faucibus sem. Integer sit amet felis dolor. Suspendisse at ipsum accumsan, faucibus ex sit amet, semper quam. Aenean dapibus aliquet justo, pretium dictum nunc sodales eget. Proin iaculis ac mauris sed vestibulum. Aenean turpis massa, dapibus vitae porttitor ut, iaculis at lacus. Etiam eu ultricies lectus. Proin porttitor vitae est at malesuada.
+   <h1> À remplir </h1>
   </div>
   <div class="col-md-6">
   	<h3>
   		En Attente
   	</h3>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed imperdiet lectus. Maecenas dapibus dictum massa ac mollis. Nulla suscipit turpis velit, a elementum purus convallis eget. Phasellus metus nibh, efficitur at tempor sit amet, ultricies vel neque. Morbi mi purus, fermentum eu convallis sit amet, posuere id metus. Sed interdum ut orci in rutrum. Nullam efficitur vehicula scelerisque. Integer sit amet dolor tristique, egestas ipsum eget, aliquet risus. Vestibulum porttitor a lacus id commodo. Proin id lorem faucibus, posuere urna eget, pellentesque metus. Duis in nisi scelerisque libero blandit mollis a ut felis. Curabitur pretium eros ut nulla faucibus, vitae maximus diam tristique. Sed at feugiat nibh.
-
-    In ultrices ac quam quis venenatis. Donec id faucibus sem. Integer sit amet felis dolor. Suspendisse at ipsum accumsan, faucibus ex sit amet, semper quam. Aenean dapibus aliquet justo, pretium dictum nunc sodales eget. Proin iaculis ac mauris sed vestibulum. Aenean turpis massa, dapibus vitae porttitor ut, iaculis at lacus. Etiam eu ultricies lectus. Proin porttitor vitae est at malesuada.
+    <div class='transaction' ng-repeat="transaction in transactions">
+      <div  ng-repeat="participant in transaction.participants"> 
+        {{participant.participant.nom}} vous doit {{participant.montantDu}}
+      </div>
+    </div>
   </div>
 </div>
 
