Données des transactions s'affichent

--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,7 @@
     <script src="app/modeles/Inscription.js"> </script>
     <script src="app/modeles/TransactionNouvelle.js"> </script>
     <script src="app/modeles/Transactions.js"> </script>
+    <script src="app/modeles/TransactionsParticipant.js"> </script>
     <script src="app/modeles/Amis.js"> </script>
 
 
