--- a/client/app/composants/tableauDeDette/tableauDeDette.html
+++ b/client/app/composants/tableauDeDette/tableauDeDette.html
@@ -6,17 +6,21 @@
 
   <button class='btn btn-primary' ng-click="ajouterTransaction()"> Ajouter une Transaction </button>
   <h3>
-      En Attente
+      Vos dettes
   </h3>
   <div class="col-md-6">
-   <h1> À remplir </h1>
+   <div class='transaction' ng-repeat="transaction in transactionsParticipant">
+      <div  ng-repeat="participant in transaction.participants" ng-if="participant.participant.mel == mel"> 
+       Vous devez {{participant.montantDu}} à {{transaction.preteur.nom}} pour {{transaction.description}}
+      </div>
+    </div>
   </div>
   <div class="col-md-6">
   	<h3>
   		En Attente
   	</h3>
-    <div class='transaction' ng-repeat="transaction in transactions">
-      <div  ng-repeat="participant in transaction.participants"> 
+    <div class='transaction' ng-repeat="transaction in transactionsDebiteur">
+      <div  ng-repeat="participant in transaction.participants" ng-if="participant.participant.mel != mel"> 
         {{participant.participant.nom}} vous doit {{participant.montantDu}}
       </div>
     </div>
