--- a/client/index.html
+++ b/client/index.html
@@ -32,6 +32,7 @@
     <script src="app/modeles/Transactions.js"> </script>
     <script src="app/modeles/TransactionsParticipant.js"> </script>
     <script src="app/modeles/Amis.js"> </script>
+    <script src="app/modeles/Solde.js"> </script>
 
 
     <!-- JavaScript Controleurs Customs -->
