--- a/client/index.html
+++ b/client/index.html
@@ -31,6 +31,7 @@
     <script src="app/modeles/TransactionNouvelle.js"> </script>
     <script src="app/modeles/Transactions.js"> </script>
     <script src="app/modeles/Amis.js"> </script>
+    <script src="app/modeles/Relations.js"> </script>
 
 
     <!-- JavaScript Controleurs Customs -->
