Fixé beug et commenté l'affiche d'une transaction individuelle

--- a/client/index.html
+++ b/client/index.html
@@ -34,6 +34,7 @@
     <script src="app/modeles/Amis.js"> </script>
     <script src="app/modeles/Relations.js"> </script>
     <script src="app/modeles/Solde.js"> </script>
+    <script src="app/modeles/TransactionId.js"> </script>
 
 
     <!-- JavaScript Controleurs Customs -->
