--- a/client/app/composants/transaction/id/transactionDiv.html
+++ b/client/app/composants/transaction/id/transactionDiv.html
@@ -1,9 +1,11 @@
 
 <div ng-controller="TransactionIdControleur" class="col-md-6 transactionId">
   <table class='table transaction table-striped'>
-  <h1>
-    Transaction
-  </h1>
+  <div>
+    <h5>
+      {{transaction.participants}}
+    </h5>
+  </div>
   
  
   </table>
