--- a/client/app/partages/navbarConnecte/navbarConnecte.html
+++ b/client/app/partages/navbarConnecte/navbarConnecte.html
@@ -1,4 +1,4 @@
-<nav ng-controller="NavbarConnecteContoleur" class="navbar navbar-inverse navbar-fixed-top">
+<nav ng-controller="NavbarConnecteControleur" class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
       <a class="navbar-brand" href="/">Splitwise</a>
