--- a/client/index.html
+++ b/client/index.html
@@ -35,6 +35,7 @@
     <script src="app/modeles/Relations.js"> </script>
     <script src="app/modeles/Solde.js"> </script>
     <script src="app/modeles/TransactionId.js"> </script>
+    <script src="app/modeles/AmiNouveau.js"> </script>
 
 
     <!-- JavaScript Controleurs Customs -->
