--- a/client/app/composants/relations/relationsDiv.html
+++ b/client/app/composants/relations/relationsDiv.html
@@ -20,7 +20,7 @@
     <div class="col-md-6">
       <input ng-model="chercheGroupe"/>
       <div ng-repeat="groupe in groupes | filter:chercheGroupe ">
-        {{groupe.texte}}
+        {{groupe.nom}}
       </div>
     </div>
 
