--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,7 @@
     <script src="app/modeles/Solde.js"> </script>
     <script src="app/modeles/TransactionId.js"> </script>
     <script src="app/modeles/AmiNouveau.js"> </script>
+    <script src="app/modeles/Groupe.js"> </script>
 
 
     <!-- JavaScript Controleurs Customs -->
