--- a/client/app/composants/groupes/ajouterGroupes.html
+++ b/client/app/composants/groupes/ajouterGroupes.html
@@ -12,7 +12,8 @@
   		<input  ng-model="NomGroupe" required="obligatoire">  </input>
   		<br/><br/>
   	Ce Groupe fait l'objet de l'organisation d'un evenement pour les utilisteurs suivants :<br/><br/>
-  		Nom : <input name="inputName" ng-model="nomAjouter" placeholder="Saisir votre nom" required="obligatoire">
+  		Nom : 
+      <input name="inputName" ng-model="nomAjouter" placeholder="Saisir votre nom" required="obligatoire">
   		<div ng-repeat="nom in noms" id="nameT" >
   			{{nom}}
   		</div>
