--- a/client/index.html
+++ b/client/index.html
@@ -34,7 +34,10 @@
     <script src="app/modeles/Amis.js"> </script>
     <script src="app/modeles/Relations.js"> </script>
     <script src="app/modeles/Solde.js"> </script>
-    <script src="app/modeles/TransactionId.js"> </script>
+    <script src="app/modeles/TransactionId.js"> </script>    
+    <script src="app/modeles/Groupe.js"> </script>
+    <script src="app/modeles/GroupeNouveau.js"> </script>
+     
 
 
     <!-- JavaScript Controleurs Customs -->
