--- a/client/app/composants/transaction/nouvelle/transactionNouvelle.html
+++ b/client/app/composants/transaction/nouvelle/transactionNouvelle.html
@@ -12,9 +12,7 @@
   			{{nom}}
   		</div>
       <ng-form ng-repeat="nom in noms" id="nomListe" >
-        <ng-form ng-repeat="n in nom.amis" id="nomListe" >
-              {{n.nom}}
-        </ng-form>
+        <h4> qmfldkjqsmldfk  </h4>
       </ng-form>
 
   		<button class="btn btn-primary btn-block" ng-click="ajouterNom()"> + Participant </button>
