--- a/client/app/composants/amis/ajouterAmis.html
+++ b/client/app/composants/amis/ajouterAmis.html
@@ -6,7 +6,7 @@
     <div  class="col-md-6" >
     	Nom : <input name="inputAmi" ng-model="nomUtilisateur" placeholder="Saisir nouvel ami" required="obligatoire">
 	    <ng-form ng-repeat="utilisateur in utilisateurs | filter: nomUtilisateur" id="nameT" >
-	  			<h3> {{utilisateur.nom}} : {{utilisateur.mel}}</h3> 
+	  			<p> {{utilisateur.nom}} : {{utilisateur.mel}}</p> 
 	  			<button type="submit" class= "btn btn-primary" ng-click="ajouterAmi(utilisateur._id)">+</button>
 	  	</ng-form>
 	</div>
