--- a/client/app/composants/groupes/ajouterGroupes.html
+++ b/client/app/composants/groupes/ajouterGroupes.html
@@ -19,6 +19,12 @@
   		</div>
   		<button class="btn btn-primary btn-block" ng-click="ajouterNom()"> + Membre </button>
   		<br/>
+
+      <ng-form ng-repeat="ami in amis | filter: nomami" id="nameAmi" >
+          <p> {{ami.nom}} : {{ami.mel}}</p> 
+          <button type="submit" class= "btn btn-primary" ng-click="ajouterAmi(ami._id)">+</button>
+      </ng-form>
+
   		<label for="Description"> Description: </label> <br/>
   		<textarea ng-model="description" required="obligatoire"> ... </textarea>
  
