--- a/client/index.html
+++ b/client/index.html
@@ -39,6 +39,7 @@
     <script src="app/modeles/Groupe.js"> </script>
     <script src="app/modeles/AmiNouveau.js"> </script>
     <script src="app/modeles/GroupeNouveau.js"> </script>
+    <script src="app/modeles/AmisGroupe.js"> </script>
      
 
     <!-- JavaScript Controleurs Customs -->
