affichage historique et toutes activités

--- a/client/app/composants/touteActivite/touteActivite.html
+++ b/client/app/composants/touteActivite/touteActivite.html
@@ -8,7 +8,7 @@
     <th> Date </th>
   </tr>
 
-  <tr ng-repeat="element in historique">
+  <tr ng-repeat="element in toutesActivites">
     <th> {{element.texte}} </th>
     <th> {{element.date}} </th>
   </tr>
