--- a/client/app/partages/activiteRecente/activiteRecente.html
+++ b/client/app/partages/activiteRecente/activiteRecente.html
@@ -3,7 +3,8 @@
     Activités Récentes
   <table id='activiteRecenteTable' class='table table-condensed table-striped table-bordered'>
   	<tr ng-repeat="activite in activitesRecentes">
-  		<td> {{activite.texte}} </td>
+		<td> {{activite.date}} </td>  
+		<td> {{activite.message}} </td>
   	</tr>
   </table>
 </div>
