afficher une transaction

--- a/client/app/composants/transaction/id/transactionDiv.html
+++ b/client/app/composants/transaction/id/transactionDiv.html
@@ -2,11 +2,17 @@
 <div ng-controller="TransactionIdControleur" class="col-md-6 transactionId">
   <table class='table transaction table-striped'>
   <div>
-    <h5>
-      {{transaction.participants}}
-    </h5>
-  </div>
-  
+  	<h1> Régler une Transaction</h1>
+  	<br/><br/>
+  	<p> Vous souhaitez payer la transaction: "{{transaction.description}}" </p>
+  	<p> créée par : "{{transaction.UtilisateurCreateur.nom}}"</p>
+  	<p> le: "{{transaction.DateCreation}}" </p>
+  	<p> Le Total de cette transaction est de: {{transaction.MontantTotal}} </p>
+  	<p> La somme à payer est de: {{montantDu}}</p>
+
+    <br/><br/>
+  	<button class="btn btn-primary btn-block" ng-click="payer()"> Payer </button>
+   </div>
  
   </table>
 </div>
